# server/srv-dba/pkg/srv-dba/srv-dba.pb.go
@@ -36,47 +36,113 @@ var file_kioku_srv_dba_v1_srv_dba_proto_rawDesc = []byte{
 	0x66, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x2e, 0x70, 0x72, 0x6f, 0x74,
 	0x6f, 0x1a, 0x24, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2f, 0x73, 0x72, 0x76, 0x2d, 0x64, 0x62, 0x61,
 	0x2f, 0x76, 0x31, 0x2f, 0x73, 0x72, 0x76, 0x2d, 0x64, 0x62, 0x61, 0x2d, 0x6b, 0x61, 0x6e, 0x6a,
-	0x69, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0x9c, 0x02, 0x0a, 0x0d, 0x53, 0x72, 0x76, 0x44,
-	0x62, 0x61, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x83, 0x01, 0x0a, 0x0a, 0x47, 0x65,
-	0x74, 0x4b, 0x61, 0x6e, 0x6a, 0x69, 0x56, 0x31, 0x12, 0x2a, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75,
-	0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e,
-	0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x4b, 0x61, 0x6e, 0x6a, 0x69, 0x56, 0x31, 0x52, 0x65, 0x71,
-	0x75, 0x65, 0x73, 0x74, 0x1a, 0x2b, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72,
-	0x76, 0x65, 0x72, 0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x47,
-	0x65, 0x74, 0x4b, 0x61, 0x6e, 0x6a, 0x69, 0x56, 0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
-	0x65, 0x22, 0x1c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x16, 0x12, 0x14, 0x2f, 0x76, 0x31, 0x2f, 0x6b,
-	0x61, 0x6e, 0x6a, 0x69, 0x2f, 0x7b, 0x6b, 0x61, 0x6e, 0x6a, 0x69, 0x5f, 0x69, 0x64, 0x7d, 0x12,
-	0x84, 0x01, 0x0a, 0x0b, 0x4c, 0x69, 0x73, 0x74, 0x4b, 0x61, 0x6e, 0x6a, 0x69, 0x56, 0x31, 0x12,
-	0x2b, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x73,
-	0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x4b, 0x61,
-	0x6e, 0x6a, 0x69, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x2c, 0x2e, 0x6b,
+	0x69, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x23, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2f, 0x73,
+	0x72, 0x76, 0x2d, 0x64, 0x62, 0x61, 0x2f, 0x76, 0x31, 0x2f, 0x73, 0x72, 0x76, 0x2d, 0x64, 0x62,
+	0x61, 0x2d, 0x77, 0x6f, 0x72, 0x64, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0x85, 0x08, 0x0a,
+	0x0d, 0x53, 0x72, 0x76, 0x44, 0x62, 0x61, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x8f,
+	0x01, 0x0a, 0x0e, 0x47, 0x65, 0x74, 0x4b, 0x61, 0x6e, 0x6a, 0x69, 0x42, 0x79, 0x49, 0x64, 0x56,
+	0x31, 0x12, 0x2e, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72,
+	0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x4b,
+	0x61, 0x6e, 0x6a, 0x69, 0x42, 0x79, 0x49, 0x64, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x1a, 0x2f, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72,
+	0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x4b,
+	0x61, 0x6e, 0x6a, 0x69, 0x42, 0x79, 0x49, 0x64, 0x56, 0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
+	0x73, 0x65, 0x22, 0x1c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x16, 0x12, 0x14, 0x2f, 0x76, 0x31, 0x2f,
+	0x6b, 0x61, 0x6e, 0x6a, 0x69, 0x2f, 0x7b, 0x6b, 0x61, 0x6e, 0x6a, 0x69, 0x5f, 0x69, 0x64, 0x7d,
+	0x12, 0x92, 0x01, 0x0a, 0x12, 0x4c, 0x69, 0x73, 0x74, 0x4b, 0x61, 0x6e, 0x6a, 0x69, 0x42, 0x79,
+	0x4c, 0x65, 0x76, 0x65, 0x6c, 0x56, 0x31, 0x12, 0x32, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2e,
+	0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e, 0x76,
+	0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x4b, 0x61, 0x6e, 0x6a, 0x69, 0x42, 0x79, 0x4c, 0x65, 0x76,
+	0x65, 0x6c, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x2c, 0x2e, 0x6b, 0x69,
+	0x6f, 0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64,
+	0x62, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x4b, 0x61, 0x6e, 0x6a, 0x69, 0x56,
+	0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1a, 0x82, 0xd3, 0xe4, 0x93, 0x02,
+	0x14, 0x12, 0x12, 0x2f, 0x76, 0x31, 0x2f, 0x6b, 0x61, 0x6e, 0x6a, 0x69, 0x73, 0x2f, 0x7b, 0x6c,
+	0x65, 0x76, 0x65, 0x6c, 0x7d, 0x12, 0x86, 0x01, 0x0a, 0x10, 0x4c, 0x69, 0x73, 0x74, 0x4b, 0x61,
+	0x6e, 0x6a, 0x69, 0x42, 0x79, 0x49, 0x64, 0x73, 0x56, 0x31, 0x12, 0x30, 0x2e, 0x6b, 0x69, 0x6f,
+	0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64, 0x62,
+	0x61, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x4b, 0x61, 0x6e, 0x6a, 0x69, 0x42, 0x79,
+	0x49, 0x64, 0x73, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x2c, 0x2e, 0x6b,
 	0x69, 0x6f, 0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x73, 0x72, 0x76, 0x5f,
 	0x64, 0x62, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x4b, 0x61, 0x6e, 0x6a, 0x69,
-	0x56, 0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1a, 0x82, 0xd3, 0xe4, 0x93,
-	0x02, 0x14, 0x12, 0x12, 0x2f, 0x76, 0x31, 0x2f, 0x6b, 0x61, 0x6e, 0x6a, 0x69, 0x73, 0x2f, 0x7b,
-	0x6c, 0x65, 0x76, 0x65, 0x6c, 0x7d, 0x42, 0x3d, 0x5a, 0x3b, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
-	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x74, 0x6f, 0x6d, 0x61, 0x7a, 0x69, 0x73, 0x2f, 0x6b, 0x69, 0x6f,
-	0x6b, 0x75, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2f, 0x73, 0x72, 0x76, 0x2d, 0x64, 0x62,
-	0x61, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x73, 0x72, 0x76, 0x2d, 0x64, 0x62, 0x61, 0x3b, 0x73, 0x72,
-	0x76, 0x5f, 0x64, 0x62, 0x61, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x56, 0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x12, 0x82, 0xd3, 0xe4, 0x93,
+	0x02, 0x0c, 0x22, 0x0a, 0x2f, 0x76, 0x31, 0x2f, 0x6b, 0x61, 0x6e, 0x6a, 0x69, 0x73, 0x12, 0x8a,
+	0x01, 0x0a, 0x0d, 0x47, 0x65, 0x74, 0x57, 0x6f, 0x72, 0x64, 0x42, 0x79, 0x49, 0x64, 0x56, 0x31,
+	0x12, 0x2d, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e,
+	0x73, 0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x57, 0x6f,
+	0x72, 0x64, 0x42, 0x79, 0x49, 0x64, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
+	0x2e, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x73,
+	0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x57, 0x6f, 0x72,
+	0x64, 0x42, 0x79, 0x49, 0x64, 0x56, 0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22,
+	0x1a, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x12, 0x12, 0x2f, 0x76, 0x31, 0x2f, 0x77, 0x6f, 0x72,
+	0x64, 0x2f, 0x7b, 0x77, 0x6f, 0x72, 0x64, 0x5f, 0x69, 0x64, 0x7d, 0x12, 0x91, 0x01, 0x0a, 0x12,
+	0x4c, 0x69, 0x73, 0x74, 0x57, 0x6f, 0x72, 0x64, 0x73, 0x42, 0x79, 0x4c, 0x65, 0x76, 0x65, 0x6c,
+	0x56, 0x31, 0x12, 0x32, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65,
+	0x72, 0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73,
+	0x74, 0x57, 0x6f, 0x72, 0x64, 0x73, 0x42, 0x79, 0x4c, 0x65, 0x76, 0x65, 0x6c, 0x56, 0x31, 0x52,
+	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x2c, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2e, 0x73,
+	0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e, 0x76, 0x31,
+	0x2e, 0x4c, 0x69, 0x73, 0x74, 0x57, 0x6f, 0x72, 0x64, 0x73, 0x56, 0x31, 0x52, 0x65, 0x73, 0x70,
+	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x19, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x13, 0x12, 0x11, 0x2f, 0x76,
+	0x31, 0x2f, 0x77, 0x6f, 0x72, 0x64, 0x73, 0x2f, 0x7b, 0x6c, 0x65, 0x76, 0x65, 0x6c, 0x7d, 0x12,
+	0x9a, 0x01, 0x0a, 0x12, 0x4c, 0x69, 0x73, 0x74, 0x57, 0x6f, 0x72, 0x64, 0x73, 0x42, 0x79, 0x4b,
+	0x61, 0x6e, 0x6a, 0x69, 0x56, 0x31, 0x12, 0x32, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2e, 0x73,
+	0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e, 0x76, 0x31,
+	0x2e, 0x4c, 0x69, 0x73, 0x74, 0x57, 0x6f, 0x72, 0x64, 0x73, 0x42, 0x79, 0x4b, 0x61, 0x6e, 0x6a,
+	0x69, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x2c, 0x2e, 0x6b, 0x69, 0x6f,
+	0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64, 0x62,
+	0x61, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x57, 0x6f, 0x72, 0x64, 0x73, 0x56, 0x31,
+	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x22, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x1c,
+	0x12, 0x1a, 0x2f, 0x76, 0x31, 0x2f, 0x77, 0x6f, 0x72, 0x64, 0x73, 0x2f, 0x6b, 0x61, 0x6e, 0x6a,
+	0x69, 0x2f, 0x7b, 0x6b, 0x61, 0x6e, 0x6a, 0x69, 0x5f, 0x69, 0x64, 0x7d, 0x12, 0x85, 0x01, 0x0a,
+	0x10, 0x4c, 0x69, 0x73, 0x74, 0x57, 0x6f, 0x72, 0x64, 0x73, 0x42, 0x79, 0x49, 0x64, 0x73, 0x56,
+	0x31, 0x12, 0x30, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72,
+	0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74,
+	0x57, 0x6f, 0x72, 0x64, 0x73, 0x42, 0x79, 0x49, 0x64, 0x73, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75,
+	0x65, 0x73, 0x74, 0x1a, 0x2c, 0x2e, 0x6b, 0x69, 0x6f, 0x6b, 0x75, 0x2e, 0x73, 0x65, 0x72, 0x76,
+	0x65, 0x72, 0x2e, 0x73, 0x72, 0x76, 0x5f, 0x64, 0x62, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69,
+	0x73, 0x74, 0x57, 0x6f, 0x72, 0x64, 0x73, 0x56, 0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
+	0x65, 0x22, 0x11, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0b, 0x12, 0x09, 0x2f, 0x76, 0x31, 0x2f, 0x77,
+	0x6f, 0x72, 0x64, 0x73, 0x42, 0x3d, 0x5a, 0x3b, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63,
+	0x6f, 0x6d, 0x2f, 0x74, 0x6f, 0x6d, 0x61, 0x7a, 0x69, 0x73, 0x2f, 0x6b, 0x69, 0x6f, 0x6b, 0x75,
+	0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2f, 0x73, 0x72, 0x76, 0x2d, 0x64, 0x62, 0x61, 0x2f,
+	0x70, 0x6b, 0x67, 0x2f, 0x73, 0x72, 0x76, 0x2d, 0x64, 0x62, 0x61, 0x3b, 0x73, 0x72, 0x76, 0x5f,
+	0x64, 0x62, 0x61, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var file_kioku_srv_dba_v1_srv_dba_proto_goTypes = []interface{}{
-	(*GetKanjiV1Request)(nil),   // 0: kioku.server.srv_dba.v1.GetKanjiV1Request
-	(*ListKanjiV1Request)(nil),  // 1: kioku.server.srv_dba.v1.ListKanjiV1Request
-	(*GetKanjiV1Response)(nil),  // 2: kioku.server.srv_dba.v1.GetKanjiV1Response
-	(*ListKanjiV1Response)(nil), // 3: kioku.server.srv_dba.v1.ListKanjiV1Response
+	(*GetKanjiByIdV1Request)(nil),     // 0: kioku.server.srv_dba.v1.GetKanjiByIdV1Request
+	(*ListKanjiByLevelV1Request)(nil), // 1: kioku.server.srv_dba.v1.ListKanjiByLevelV1Request
+	(*ListKanjiByIdsV1Request)(nil),   // 2: kioku.server.srv_dba.v1.ListKanjiByIdsV1Request
+	(*GetWordByIdV1Request)(nil),      // 3: kioku.server.srv_dba.v1.GetWordByIdV1Request
+	(*ListWordsByLevelV1Request)(nil), // 4: kioku.server.srv_dba.v1.ListWordsByLevelV1Request
+	(*ListWordsByKanjiV1Request)(nil), // 5: kioku.server.srv_dba.v1.ListWordsByKanjiV1Request
+	(*ListWordsByIdsV1Request)(nil),   // 6: kioku.server.srv_dba.v1.ListWordsByIdsV1Request
+	(*GetKanjiByIdV1Response)(nil),    // 7: kioku.server.srv_dba.v1.GetKanjiByIdV1Response
+	(*ListKanjiV1Response)(nil),       // 8: kioku.server.srv_dba.v1.ListKanjiV1Response
+	(*GetWordByIdV1Response)(nil),     // 9: kioku.server.srv_dba.v1.GetWordByIdV1Response
+	(*ListWordsV1Response)(nil),       // 10: kioku.server.srv_dba.v1.ListWordsV1Response
 }
 var file_kioku_srv_dba_v1_srv_dba_proto_depIdxs = []int32{
-	0, // 0: kioku.server.srv_dba.v1.SrvDbaService.GetKanjiV1:input_type -> kioku.server.srv_dba.v1.GetKanjiV1Request
-	1, // 1: kioku.server.srv_dba.v1.SrvDbaService.ListKanjiV1:input_type -> kioku.server.srv_dba.v1.ListKanjiV1Request
-	2, // 2: kioku.server.srv_dba.v1.SrvDbaService.GetKanjiV1:output_type -> kioku.server.srv_dba.v1.GetKanjiV1Response
-	3, // 3: kioku.server.srv_dba.v1.SrvDbaService.ListKanjiV1:output_type -> kioku.server.srv_dba.v1.ListKanjiV1Response
-	2, // [2:4] is the sub-list for method output_type
-	0, // [0:2] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
+	0,  // 0: kioku.server.srv_dba.v1.SrvDbaService.GetKanjiByIdV1:input_type -> kioku.server.srv_dba.v1.GetKanjiByIdV1Request
+	1,  // 1: kioku.server.srv_dba.v1.SrvDbaService.ListKanjiByLevelV1:input_type -> kioku.server.srv_dba.v1.ListKanjiByLevelV1Request
+	2,  // 2: kioku.server.srv_dba.v1.SrvDbaService.ListKanjiByIdsV1:input_type -> kioku.server.srv_dba.v1.ListKanjiByIdsV1Request
+	3,  // 3: kioku.server.srv_dba.v1.SrvDbaService.GetWordByIdV1:input_type -> kioku.server.srv_dba.v1.GetWordByIdV1Request
+	4,  // 4: kioku.server.srv_dba.v1.SrvDbaService.ListWordsByLevelV1:input_type -> kioku.server.srv_dba.v1.ListWordsByLevelV1Request
+	5,  // 5: kioku.server.srv_dba.v1.SrvDbaService.ListWordsByKanjiV1:input_type -> kioku.server.srv_dba.v1.ListWordsByKanjiV1Request
+	6,  // 6: kioku.server.srv_dba.v1.SrvDbaService.ListWordsByIdsV1:input_type -> kioku.server.srv_dba.v1.ListWordsByIdsV1Request
+	7,  // 7: kioku.server.srv_dba.v1.SrvDbaService.GetKanjiByIdV1:output_type -> kioku.server.srv_dba.v1.GetKanjiByIdV1Response
+	8,  // 8: kioku.server.srv_dba.v1.SrvDbaService.ListKanjiByLevelV1:output_type -> kioku.server.srv_dba.v1.ListKanjiV1Response
+	8,  // 9: kioku.server.srv_dba.v1.SrvDbaService.ListKanjiByIdsV1:output_type -> kioku.server.srv_dba.v1.ListKanjiV1Response
+	9,  // 10: kioku.server.srv_dba.v1.SrvDbaService.GetWordByIdV1:output_type -> kioku.server.srv_dba.v1.GetWordByIdV1Response
+	10, // 11: kioku.server.srv_dba.v1.SrvDbaService.ListWordsByLevelV1:output_type -> kioku.server.srv_dba.v1.ListWordsV1Response
+	10, // 12: kioku.server.srv_dba.v1.SrvDbaService.ListWordsByKanjiV1:output_type -> kioku.server.srv_dba.v1.ListWordsV1Response
+	10, // 13: kioku.server.srv_dba.v1.SrvDbaService.ListWordsByIdsV1:output_type -> kioku.server.srv_dba.v1.ListWordsV1Response
+	7,  // [7:14] is the sub-list for method output_type
+	0,  // [0:7] is the sub-list for method input_type
+	0,  // [0:0] is the sub-list for extension type_name
+	0,  // [0:0] is the sub-list for extension extendee
+	0,  // [0:0] is the sub-list for field type_name
 }
 
 func init() { file_kioku_srv_dba_v1_srv_dba_proto_init() }
@@ -85,6 +151,7 @@ func file_kioku_srv_dba_v1_srv_dba_proto_init() {
 		return
 	}
 	file_kioku_srv_dba_v1_srv_dba_kanji_proto_init()
+	file_kioku_srv_dba_v1_srv_dba_word_proto_init()
 	type x struct{}
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
